--- a/PokerServer/pom.xml
+++ b/PokerServer/pom.xml
@@ -82,10 +82,12 @@
         <artifactId>utils</artifactId>
         <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>pl.edu.agh.kis.pz1</groupId>
-      <artifactId>main2</artifactId>
-    </dependency>
+      <dependency>
+          <groupId>pl.edu.agh.kis.pz1</groupId>
+          <artifactId>PokerClient</artifactId>
+          <version>1.0</version>
+          <scope>compile</scope>
+      </dependency>
 
 
   </dependencies>
