--- a/PokerClient/pom.xml
+++ b/PokerClient/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>PokerClient</artifactId>
-    <name>PokerClient modul</name>
+    <name>PokerClient</name>
     <dependencies>
         <dependency>
             <groupId>pl.edu.agh.kis.pz1</groupId>
