--- a/PokerServer/pom.xml
+++ b/PokerServer/pom.xml
@@ -66,6 +66,29 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.4.1</version>
       </plugin>
+
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>pl.edu.agh.kis.pz1.Server</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build> 
 
@@ -88,6 +111,10 @@
           <artifactId>PokerClient</artifactId>
           <version>1.0</version>
           <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>pl.edu.agh.kis.pz1</groupId>
+          <artifactId>PokerModel</artifactId>
       </dependency>
 
 
