--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,9 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.4.1</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
